<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">GPS Ant!</string>
    <string name="app_name">GPS Ant</string>
    <string name="gps_status">GPS Ant - Status</string>
<string name="LabelAllowed">Allowed:</string>
<string name="ValueAllowed">@string/DefaultAllowed</string>
<string name="LabelActive">Fix Status:</string>
<string name="ValueActive">@string/DefaultActive</string>
<string name="LabelSatsSeen">Satellites Seen:</string>
<string name="ValueSatsSeen">@string/DefaultSatsSeen</string>
<string name="LabelSatsLocked">Satellites Locked:</string>
<string name="ValueSatsLocked">@string/DefaultSatsLocked</string>
<string name="LabelLatitude">Latitude:</string>
<string name="ValueLatitude">@string/DefaultLatitude</string>
<string name="LabelLongitude">Longitude:</string>
<string name="ValueLongitude">@string/DefaultLongitude</string>
<string name="LabelAltitude">Altitude:</string>
<string name="ValueAltitude">@string/DefaultAltitude</string>
<string name="LabelAccuracy">Accuracy:</string>
<string name="ValueAccuracy">@string/DefaultAccuracy</string>
<string name="LabelProvider">Provider:</string>
<string name="ValueProvider">@string/DefaultProvider</string>
<string name="LabelSpeed">Speed:</string>
<string name="ValueSpeed">@string/DefaultSpeed</string>
<string name="LabelBearing">Bearing:</string>
<string name="ValueBearing">@string/DefaultBearing</string>
<string name="DefaultActive">-----</string>
<string name="DefaultAllowed">-----</string>
<string name="DefaultProvider">-----</string>
<string name="DefaultSatsSeen">#</string>
<string name="DefaultSatsLocked">#</string>
<string name="DefaultLatitude">-----</string>
<string name="DefaultLongitude">-----</string>
<string name="DefaultAltitude">-----</string>
<string name="DefaultSpeed">-----</string>
<string name="DefaultBearing">-----</string>
<string name="DefaultAccuracy">-----</string>
<string name="LabelTimestamp">Time of last fix:</string>
<string name="ValueTimestamp">@string/DefaultTimestamp</string>
<string name="DefaultTimestamp">--:--:--</string>
<string name="Version">v0.2.0</string>
<string name="MenuMainAbout">About</string>
<string name="MenuMainExit">Exit</string>
<string name="AboutText01">This is currently a simple GPS Status application.  The intention is to eventually expand it to track movement and save points for display on Maps or to export to a file.\n</string>
<string name="AboutText02">Author: Athanasius &lt;android-apps@miggy.org&gt;\nHomepage: http://www.miggy.org/android/GPS-Ant/\n</string>
<string name="AboutText03">Version:</string>
<string name="AboutTitle">About</string>
<string name="GPSAllowedEnabled">Enabled</string>
<string name="GPSAllowedDisabled">Disabled</string>
<string name="HeaderFix">Fix</string>
<string name="HeaderInfo">Info</string>
<string name="Available">Available</string>
<string name="OutOfService">Out of Service</string>
<string name="TempUnavail">Temporarily Unavailable</string>
<string name="LabelLastInfo">Last Info.:</string>
<string name="DefaultLastInfo">--:--:--</string>
<string name="ValueLastInfo">@string/DefaultLastInfo</string>
<string name="Started">Started</string>
<string name="Stopped">Stopped</string>
<string name="FirstFix">First Fix</string>
<string name="GotFix">Got Fix</string>
<string name="OldFix">Old Fix</string>
<string name="SatsHeaderID">Id</string>
<string name="SatsHeaderAzimuth">Azimuth</string>
<string name="SatsHeaderElevation">Elevation</string>
<string name="SatsHeaderSNR">SNR</string>
<string name="SatsHeaderAlmanac">Almanac</string>
<string name="SatsHeaderEphemeris">Ephemeris</string>
<string name="SatsRowTextSize">12dip</string>
<string name="MenuMainSatellites">Satellites</string>
<string name="LabelGPSReader">GPS Reader</string>
<string name="GPSReader_stopped">GPS Reader Service stopped</string>
<string name="GPSReader_started">GPS Reader Service started</string>
<string name="GPSReader_service_label">GPS Reader</string>
<string name="GPSReader_service_connected">GPS Reader service connected</string>
<string name="GPSReader_service_disconnected">GPS Reader service disconnected</string>
<string name="LabelGPSSats">GPS Ant - Satellites</string>
<color name="ColorSatUsed">#333333</color>
<color name="ColorSatUnused">#000000</color>
</resources>
